- is caused by
-
SERVER-57721 Remove support for handling non-clustered timeseries collections
-
- Closed
-
- related to
-
SERVER-73901 Time-series inserts succeed even if time-series view does not exist
-
- Closed
-
-
SERVER-79630 Disallow creating and preventing upgrading with system.buckets namespaces which aren't timeseries collections
-
- Closed
-
-
SERVER-115210 Expand checkMetadataConsistency to check timeseries collections for bucketing parameters & clusteredIndex inconsistencies
-
- Needs Scheduling
-