SERVER-88200 Check that buckets coll is valid on time-series writes (#20508)

(cherry picked from commit 5f8784fd99ad01d4ad0741c5c221fa77c198245f)

GitOrigin-RevId: f9af5ddf80f1cb36d0782f377ec6b67cc00bea99